# hw_1

./: 1.1.py  1.2.py  1.3.py  pyproject.toml
artifacts/: log_1.1.txt  log_1.2.txt  log_1.3.txt
