[project]
name = "hw-1"
version = "0.1.0"
description = "утилиты для обработки данных"
authors = [
    {name = "Evgenii Garmashov",email = "evgeniigarmashov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
